Use docker for cypress in package.json

--- a/package.json
+++ b/package.json
@@ -31,14 +31,16 @@
     "test-watch": "jest --watch",
     "test-coverage": "jest test/unit/*.js --coverage --collectCoverageFrom 'src/**/*.js'",
     "test-regression": "jest test/regression/*.js",
-    "cypress": "echo \"disabled due to issues. try upgrading? # yarn run _server_cy_then _cy:open\"",
-    "cypress:update-snapshots": "yarn run _server_cy_then _cy:update",
-    "ci:cypress": "yarn run _server_cy_then _cy:run",
-    "_cy:update": "CYPRESS_updateSnapshots=true ./cypress-run.sh",
+    "test-ci:cypress": "yarn run _server_cy_then _cy:run",
+    "cypress": "./cypress-run.sh docker",
+    "cypress:update-snapshots": "./cypress-run.sh docker-update-snapshots",
+    "cypress:gui": "yarn run _server_cy_then _cy:open",
+    "cypress:gui-update-snapshots": "yarn run _server_cy_then _cy:local-update-snapshots",
+    "_cy:local-update-snapshots": "./cypress-run.sh local-update-snapshots",
     "_cy:open": "cypress open",
     "_cy:run": "./cypress-run.sh",
-    "_server_cy_then": "start-server-and-test _cy-server http://localhost:3001",
     "_cy-server": "concurrently \"npm run dev\" \"ws -p 3001\"",
+    "_server_cy_then": "start-server-and-test _cy-server http://localhost:3001",
     "docs": "bash ./build-docs.sh",
     "docs-commit": "npm run docs && git add docs && git diff-index --quiet HEAD || git commit -m 'update docs in preparation for release'",
     "format": "prettier --write '{src,test}/**/*.js'",
