--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,8 @@
 {
-    "presets": ["env"],
-    "plugins": []
+    "presets": [
+        "env"
+    ],
+    "plugins": [
+        "add-module-exports"
+    ]
 }
