s/yarn run/yarn/ on commands

--- a/package.json
+++ b/package.json
@@ -30,24 +30,24 @@
     "test-integration": "jest test/integration/*.js",
     "test-watch": "jest --watch",
     "test-coverage": "jest test/unit/*.js --coverage --collectCoverageFrom 'src/**/*.js'",
-    "test-ci:cypress": "yarn run _server_cy_then _cy:run",
+    "test-ci:cypress": "yarn _server_cy_then _cy:run",
     "cypress": "./cypress-run.sh docker",
     "cypress:update-snapshots": "./cypress-run.sh docker-update-snapshots",
-    "cypress:gui": "yarn run _server_cy_then _cy:open",
-    "cypress:gui-update-snapshots": "yarn run _server_cy_then _cy:local-update-snapshots",
+    "cypress:gui": "yarn _server_cy_then _cy:open",
+    "cypress:gui-update-snapshots": "yarn _server_cy_then _cy:local-update-snapshots",
     "_cy:local-update-snapshots": "./cypress-run.sh local-update-snapshots",
     "_cy:open": "./cypress-run.sh local",
     "_cy:run": "./cypress-run.sh",
     "_cy-server": "concurrently \"npm run dev\" \"ws -p 3001\"",
     "_server_cy_then": "start-server-and-test _cy-server http://localhost:3001",
     "docs": "bash ./build-docs.sh",
-    "docs-commit": "yarn run docs && git add docs && git diff-index --quiet HEAD || git commit -m 'update docs in preparation for release'",
+    "docs-commit": "yarn docs && git add docs && git diff-index --quiet HEAD || git commit -m 'update docs in preparation for release'",
     "format": "prettier --write '{src,test}/**/*.js'",
     "lint": "eslint '{src,test}/**/*.js'",
-    "precommit": "yarn run lint && yarn run format && yarn run test-unit",
-    "release:major": "yarn run docs-commit && changelog -M && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && yarn version --new-version major",
-    "release:minor": "yarn run docs-commit && changelog -m && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && yarn version --new-version minor",
-    "release:patch": "yarn run docs-commit && changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && yarn version --new-version patch",
+    "precommit": "yarn lint && yarn format && yarn test-unit",
+    "release:major": "yarn docs-commit && changelog -M && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && yarn version --new-version major",
+    "release:minor": "yarn docs-commit && changelog -m && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && yarn version --new-version minor",
+    "release:patch": "yarn docs-commit && changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && yarn version --new-version patch",
     "postversion": "git push -u origin HEAD --follow-tags"
   },
   "dependencies": {
