--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "babel-plugin-add-module-exports": "^1.0.0",
     "babel-preset-env": "^1.7.0",
     "concurrently": "^4.1.1",
-    "cypress": "3.5.0",
+    "cypress": "^4.4.0",
     "cypress-image-snapshot": "^3.1.1",
     "eslint": "^4.18.2",
     "eslint-loader": "^2.0.0",
