--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "_server_cy_then": "start-server-and-test _cy-server http://localhost:3001",
     "docs": "bash ./build-docs.sh",
     "docs-commit": "yarn docs && git add docs && git diff-index --quiet HEAD || git commit -m 'update docs in preparation for release'",
-    "format": "prettier --write '{src,test}/**/*.js'",
-    "lint": "eslint '{src,test}/**/*.js'",
+    "format": "prettier --write  'src/**/*.ts' 'test/**/*.js'",
+    "lint": "eslint 'src/**/*.ts' 'test/**/*.js'",
     "precommit": "yarn lint && yarn format && yarn test-unit",
     "release:major": "yarn docs-commit && changelog -M && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && yarn version --new-version major",
     "release:minor": "yarn docs-commit && changelog -m && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && yarn version --new-version minor",
@@ -54,6 +54,8 @@
     "regenerator-runtime": "^0.11.1"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-jest": "^23.2.0",
@@ -63,7 +65,7 @@
     "concurrently": "^7.0.0",
     "cypress": "^4.4.0",
     "cypress-image-snapshot": "^4.0.1",
-    "eslint": "^4.18.2",
+    "eslint": "^8.36.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-cypress": "^2.2.0",
     "generate-changelog": "^1.7.1",
@@ -73,10 +75,11 @@
     "jest-image-snapshot": "^6.0.0",
     "jsdoc": "^3.4.3",
     "local-web-server": "^2.6.1",
-    "prettier": "^1.13.2",
+    "prettier": "^2.8.4",
     "raw-loader": "^0.5.1",
     "sinon": "^7.2.7",
     "start-server-and-test": "^1.7.11",
+    "typescript": "^5.0.2",
     "webgl-mock": "^0.1.7",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0"
