fix type errors and tests

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,8 @@
             "error",
             "always"
         ],
-        "no-console": 0
+        "no-console": 0,
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": "error"
     }
 }
