--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "license": "Apache-2.0",
   "main": "dist/videocontext.js",
+  "types": "dist/videocontext.d.ts",
   "keywords": [
     "video",
     "context",
@@ -54,24 +55,26 @@
     "regenerator-runtime": "^0.11.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.3",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.21.0",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-jest": "^23.2.0",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-add-module-exports": "^1.0.0",
-    "babel-preset-env": "^1.7.0",
+    "babel-jest": "^29.5.0",
+    "babel-loader": "^9.1.2",
+    "babel-plugin-add-module-exports": "^1.0.4",
     "concurrently": "^7.0.0",
     "cypress": "^4.4.0",
     "cypress-image-snapshot": "^4.0.1",
     "eslint": "^8.36.0",
-    "eslint-loader": "^2.0.0",
     "eslint-plugin-cypress": "^2.2.0",
+    "eslint-webpack-plugin": "^4.0.0",
     "generate-changelog": "^1.7.1",
     "husky": "^0.14.3",
-    "jest": "^29.3.1",
-    "jest-cli": "^23.1.0",
+    "jest": "^29.5.0",
+    "jest-cli": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "jest-image-snapshot": "^6.0.0",
     "jsdoc": "^3.4.3",
     "local-web-server": "^2.6.1",
@@ -79,6 +82,7 @@
     "raw-loader": "^0.5.1",
     "sinon": "^7.2.7",
     "start-server-and-test": "^1.7.11",
+    "ts-loader": "^9.4.2",
     "typescript": "^5.0.2",
     "webgl-mock": "^0.1.7",
     "webpack": "^5.75.0",
@@ -88,9 +92,14 @@
     "dist"
   ],
   "jest": {
+    "testEnvironment": "jsdom",
     "moduleNameMapper": {
       "\\.(frag|vert)$": "<rootDir>/test/__mocks__/glsl.js"
     },
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
     "testMatch": [
       "**/test/(integration|unit)/?(*.)+(spec|test).js?(x)"
     ]
